; ModuleID = '/home/carl/AnghaBench/curl/src/extr_tool_parsecfg.c_my_get_line.c'
source_filename = "/home/carl/AnghaBench/curl/src/extr_tool_parsecfg.c_my_get_line.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32*)* @my_get_line to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @my_get_line(i32* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca [4096 x i8], align 16
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i8* null, i8** %5, align 8
  store i8* null, i8** %6, align 8
  br label %9

9:                                                ; preds = %50, %1
  %10 = getelementptr inbounds [4096 x i8], [4096 x i8]* %4, i64 0, i64 0
  %11 = load i32*, i32** %3, align 8
  %12 = call i32* @fgets(i8* %10, i32 4096, i32* %11)
  %13 = icmp eq i32* null, %12
  br i1 %13, label %14, label %15

14:                                               ; preds = %9
  br label %54

15:                                               ; preds = %9
  %16 = load i8*, i8** %6, align 8
  %17 = icmp ne i8* %16, null
  br i1 %17, label %25, label %18

18:                                               ; preds = %15
  %19 = getelementptr inbounds [4096 x i8], [4096 x i8]* %4, i64 0, i64 0
  %20 = call i8* @strdup(i8* %19)
  store i8* %20, i8** %6, align 8
  %21 = load i8*, i8** %6, align 8
  %22 = icmp ne i8* %21, null
  br i1 %22, label %24, label %23

23:                                               ; preds = %18
  store i8* null, i8** %2, align 8
  br label %61

24:                                               ; preds = %18
  br label %47

25:                                               ; preds = %15
  %26 = load i8*, i8** %6, align 8
  %27 = call i64 @strlen(i8* %26)
  store i64 %27, i64* %8, align 8
  %28 = load i8*, i8** %6, align 8
  %29 = load i64, i64* %8, align 8
  %30 = getelementptr inbounds [4096 x i8], [4096 x i8]* %4, i64 0, i64 0
  %31 = call i64 @strlen(i8* %30)
  %32 = add i64 %29, %31
  %33 = add i64 %32, 1
  %34 = call i8* @realloc(i8* %28, i64 %33)
  store i8* %34, i8** %7, align 8
  %35 = load i8*, i8** %7, align 8
  %36 = icmp ne i8* %35, null
  br i1 %36, label %40, label %37

37:                                               ; preds = %25
  %38 = load i8*, i8** %6, align 8
  %39 = call i32 @Curl_safefree(i8* %38)
  store i8* null, i8** %2, align 8
  br label %61

40:                                               ; preds = %25
  %41 = load i8*, i8** %7, align 8
  store i8* %41, i8** %6, align 8
  %42 = load i8*, i8** %6, align 8
  %43 = load i64, i64* %8, align 8
  %44 = getelementptr inbounds i8, i8* %42, i64 %43
  %45 = getelementptr inbounds [4096 x i8], [4096 x i8]* %4, i64 0, i64 0
  %46 = call i32 @strcpy(i8* %44, i8* %45)
  br label %47

47:                                               ; preds = %40, %24
  %48 = load i8*, i8** %6, align 8
  %49 = call i8* @strchr(i8* %48, i8 signext 10)
  store i8* %49, i8** %5, align 8
  br label %50

50:                                               ; preds = %47
  %51 = load i8*, i8** %5, align 8
  %52 = icmp ne i8* %51, null
  %53 = xor i1 %52, true
  br i1 %53, label %9, label %54

54:                                               ; preds = %50, %14
  %55 = load i8*, i8** %5, align 8
  %56 = icmp ne i8* %55, null
  br i1 %56, label %57, label %59

57:                                               ; preds = %54
  %58 = load i8*, i8** %5, align 8
  store i8 0, i8* %58, align 1
  br label %59

59:                                               ; preds = %57, %54
  %60 = load i8*, i8** %6, align 8
  store i8* %60, i8** %2, align 8
  br label %61

61:                                               ; preds = %59, %37, %23
  %62 = load i8*, i8** %2, align 8
  ret i8* %62
}

declare dso_local i32* @fgets(i8*, i32, i32*) #1

declare dso_local i8* @strdup(i8*) #1

declare dso_local i64 @strlen(i8*) #1

declare dso_local i8* @realloc(i8*, i64) #1

declare dso_local i32 @Curl_safefree(i8*) #1

declare dso_local i32 @strcpy(i8*, i8*) #1

declare dso_local i8* @strchr(i8*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
